[package]
name = "xlsxwriter-node"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi8", "chrono_date"] }
napi-derive = "3"
rust_xlsxwriter = { version = "0.95.0", features = ["chrono"] }
chrono = "0.4"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
opt-level = 3
